--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,19 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+NumberGames/.idea/.name
+NumberGames/.idea/compiler.xml
+NumberGames/.idea/copyright/profiles_settings.xml
+NumberGames/.idea/encodings.xml
+NumberGames/.idea/libraries/Maven__info_cukes_cucumber_core_1_1_3.xml
+NumberGames/.idea/libraries/Maven__info_cukes_cucumber_java_1_1_3.xml
+NumberGames/.idea/libraries/Maven__info_cukes_cucumber_junit_1_1_3.xml
+NumberGames/.idea/libraries/Maven__junit_junit_3_8_1.xml
+NumberGames/.idea/libraries/Maven__junit_junit_4_11.xml
+NumberGames/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+NumberGames/.idea/misc.xml
+NumberGames/.idea/modules.xml
+NumberGames/.idea/scopes/scope_settings.xml
+NumberGames/.idea/uiDesigner.xml
+NumberGames/.idea/vcs.xml
+NumberGames/.idea/workspace.xml
